<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addCrypto.AddOrUpdateCryptoActivity">

    <TextView
        android:id="@+id/tvViewState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Update or add crypto" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCoinName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:hint="@string/coin_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvViewState">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieCoinName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="12"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:hint="@string/price"
        app:helperText="enter the amount in dollars$"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilCoinName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieCoinPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="12"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilQuantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:hint="@string/quantity"
        app:helperText="enter the number of coins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPrice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieQuantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLength="12"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btnAddOrUpdate"
        style="@style/Buttons"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp48"
        android:layout_margin="@dimen/dp16"
        android:text="@string/add_crypto"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilQuantity" />

    <TextView
        android:id="@+id/btnDelete"
        style="@style/Buttons.Delete"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="@dimen/dp48"
        android:layout_margin="@dimen/dp16"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddOrUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>